--- a/Calculadora.html
+++ b/Calculadora.html
@@ -21,32 +21,5 @@
     <p id="resultado"></p>
     
 </body>
-    <script>
-        function calcular(){
-            var num1 = parseFloat(document.getElementById('num1').value);
-            var num2 = parseFloat(document.getElementById('num2').value);
-            var operador = document.getElementById('operador').value;
-            var resultado;
-            switch (operador) {
-                case '+':
-                    resultado = num1+num2;
-                    break;
-
-                case '-':
-                resultado = num1-num2;
-                    break;
-
-                case '*':
-                resultado = num1*num2;
-                    break;
-
-                case '/':
-                resultado = num1/num2;
-                    break;
-                default:
-                        resultado = "Opção Inválida";
-            } 
-        document.getElementById('resultado').innerHTML = "Resultado: " + resultado;
-    }                       
-    </script>
+    <script src="scriptCalculadora.js"></script>
 </html>
